Fix survey menu style on mobile devices

--- a/app/styles/survey.css
+++ b/app/styles/survey.css
@@ -390,3 +390,7 @@ textarea {
   width: 100%;
   font-size: 1.2em;
 }
+
+#screens div#menufold-static {
+    flex: 0 1 auto;
+}
